<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">限界测量仪</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="save_data">保存</string>
    <string name="conn_start">开始</string>
    <string name="conn_pause">暂停</string>
    <string name="conn_stop">停止</string>
    <string name="line_number">股道号</string>
    <string name="line_name">线路名称</string>
    <string name="track">是否正线</string>
    <string name="radius">半径(m)</string>
    <string name="outerrail_high">外轨超高(mm)</string>
    <string name="sample_interval">采样间隔(m)</string>
    <string name="inner_side">是否内侧</string>
    <string name="measure_startposition">中心里程</string>
    <string name="immediately_measure">立即测量</string>
    <string name="report_index0">测量点序号</string>
    <string name="report_index1">测量点</string>
    <string name="report_index2">距轨顶面断面测量高度</string>
    <string name="report_index3">距轨中心线距离</string>
    <string name="report_index4">倾角</string>
    <string name="report_index5">雨棚高度</string>
    <string name="report_index6">行进距离</string>
    <string name="report_index7">月台高度</string>
    <string name="report_index8">月台距离</string>
    <string name="report_index9">侵限值</string>
    <string name="report_index10">是否超限</string>
    <string name="export">导出</string>
    <string name="label_export">导出Excel报表</string>
    <string name="label_select_dir">存放的文件夹:</string>
    <string name="label_dir">/sdcard</string>
    <string name="export_excel">导出报表</string>
    <string name="app_release_name">数显式站台限界测量仪</string>
    <string name="company">深圳市深量精密量具有限公司</string>
    
    <!-- 第二版本修改 -->
     <string name="stand_name">站名设备名称</string> <!-- 站名、设备名称 -->
     <string name="stand_id">设备编号</string> <!-- 设备编号 -->
     <string name="stand_area">换算面积 </string>
    <!-- 换算面积 -->
     <string name="stand_direction">面向车站 </string> <!-- 测量时面向车站  -->
     <string name="stand_orientation">设备方位</string> <!-- 设备方位 -->
     <string name="bight_direction">曲线方向</string> <!-- 曲线方向 -->
     <string name="rail_high">是否高铁 </string> <!-- 是否高铁 --> 
     <string name="edit">编辑</string>
     <string name="update_result">更新数据</string>
    
</resources>
