<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/label_export"
        android:textSize="10pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView  
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_select_dir"
            android:textSize="8pt"
            android:layout_marginRight="10dp"
            />
        
        <EditText  
            android:id="@+id/dir_path"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/label_dir"
            android:editable="false"
            />
        
        <Button
            android:id="@+id/export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export" 
            android:textSize="8pt"/>
    </LinearLayout>

</LinearLayout>