<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="400dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/top"
        style="@style/list_textview"
        android:layout_width="fill_parent"
        android:text="@string/update_result"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/tv_rainshed_high"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/list_textview"
            android:layout_marginTop="30dp"
            android:text="@string/report_index5"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_rainshed_high"
            style="@style/app_editview_number"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tv_platform_distance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_below="@id/tv_rainshed_high"
        android:orientation="horizontal" >

        <TextView
            style="@style/list_textview"
            android:layout_marginTop="20dp"
            android:text="@string/report_index8"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_platform_distance"
            style="@style/app_editview_number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tv_platform_high"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_below="@id/tv_platform_distance"
        android:orientation="horizontal" >

        <TextView
            style="@style/list_textview"
            android:text="@string/report_index7"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_platform_high"
            style="@style/app_editview_number" />
    </LinearLayout>

   <LinearLayout
        android:id="@+id/tv_platform_limit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_below="@id/tv_platform_high"
        android:orientation="horizontal" >

        <TextView
            style="@style/list_textview"
            android:text="@string/report_index9"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_platform_limit"
            style="@style/app_editview_number" />
    </LinearLayout>
    
    <Button
        android:id="@+id/save_data"
        style="@style/list_textview"
        android:layout_width="wrap_content"
        android:layout_below="@id/tv_platform_limit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/save_data" />

</RelativeLayout>